# cookiecutter-python

./: .gitignore  README.md  requirements_dev.txt
.github/: renovate.json5
.github/workflow/: test.yaml
{{ cookiecutter.project_name }}/: .gitignore  .pre-commit-config.yaml  .ruff.toml  pyproject.toml  requirements_dev.txt
{{ cookiecutter.project_name }}/.github/: renovate.json5
{{ cookiecutter.project_name }}/.github/workflows/: cruft.yaml  lint.yaml  pages.yaml  publish.yaml  test.yaml
